--- a/Scroll/scroll/index.html
+++ b/Scroll/scroll/index.html
@@ -1,14 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>scroll</title>
-  </head>
-  <body>
+</head>
+<body>
     <canvas id="bg"></canvas>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+    <section id="section">
+        <h1>1</h1>
+    </section>
+    <section id="section">
+        <h2>2</h2>
+    </section>
+    <section id="section">
+        <h2>3</h2>
+    </section>
+
+    <script type="module" src="main.js"></script>
+</body>
 </html>
