--- a/test/test/index.html
+++ b/test/test/index.html
@@ -9,6 +9,15 @@
   <body>
     <canvas id="bg"></canvas>
     <div id="app"></div>
+    <section class="section">
+      <h1>My Portfolio</h1>
+  </section>
+  <section class="section">
+      <h2>My projects</h2>
+  </section>
+  <section class="section">
+      <h2>Contact me</h2>
+  </section>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
