--- a/Scroll/scroll/index.html
+++ b/Scroll/scroll/index.html
@@ -9,13 +9,13 @@
     <canvas id="bg"></canvas>
 
     <section id="section">
-        <h1>1</h1>
+        <h1>hello</h1>
     </section>
     <section id="section">
-        <h2>2</h2>
+        <h2>world</h2>
     </section>
     <section id="section">
-        <h2>3</h2>
+        <h2>helo</h2>
     </section>
 
     <script type="module" src="main.js"></script>
