--- a/hdriJS/HDRI/index.html
+++ b/hdriJS/HDRI/index.html
@@ -7,6 +7,15 @@
     <title>Hdri</title>
   </head>
   <body>
+    <!-- Add this before your canvas -->
+  <div id="preloader" style="position: fixed; top:0; left:0; width:100%; height:100%; background: #000; z-index: 9999;"></div>
+
+<script>
+// Remove preloader after first render
+window.addEventListener('load', () => {
+  document.getElementById('preloader').style.display = 'none';
+});
+</script>
     <canvas id="bg"></canvas>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
